--- a/Foundations/PyTorchbasics.ipynb
+++ b/Foundations/PyTorchbasics.ipynb
@@ -121,24 +121,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 2., 3.],\n",
+      "        [4., 5., 6.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.Tensor([[1,2,3],[4,5,6]])\n",
+    "print(x)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([3, 2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Reshape\n",
+    "x= torch.randn(2,3)\n",
+    "y =x.view(3,2)\n",
+    "print(y.shape)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[ 1,  1,  1,  1],\n",
+      "         [ 2,  2,  2,  2],\n",
+      "         [ 3,  3,  3,  3]],\n",
+      "\n",
+      "        [[10, 10, 10, 10],\n",
+      "         [20, 20, 20, 20],\n",
+      "         [30, 30, 30, 30]]])\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "torch.Size([4, 6])\n",
+      "torch.Size([3, 8])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.tensor([\n",
+    "    [[1,1,1,1], [2,2,2,2], [3,3,3,3]],\n",
+    "    [[10,10,10,10], [20,20,20,20], [30,30,30,30]]\n",
+    "])\n",
+    "\n",
+    "print(x)\n",
+    "print(x.size(0))\n",
+    "print(x.size(1))\n",
+    "print(x.size(2))\n",
+    "\n",
+    "\n",
+    "a = x.view(x.size(1),-1)  # -1 flattens the array, here 3,-1 means 3 will be first dimension and fit the other elements by flatting the array\n",
+    "b=x.view(x.size(2),-1)\n",
+    "print(b.shape)\n",
+    "print(a.shape)\n"
+   ]
   },
   {
    "cell_type": "code",
