--- a/Foundations/PyTorchbasics.ipynb
+++ b/Foundations/PyTorchbasics.ipynb
@@ -202,17 +202,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Values: \n",
+      "tensor([[ 0.1922,  0.0918, -0.8625],\n",
+      "        [ 0.1596,  0.8184, -0.7649]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dimensional operations\n",
+    "x = torch.randn(2, 3)\n",
+    "print(f\"Values: \\n{x}\")\n",
+    "y = torch.sum(x, dim=0) # add each row's value for every column"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x: \n",
+      "tensor([[ 0.8042, -0.1383,  0.3196, -1.0187],\n",
+      "        [-1.3147,  2.5228,  0.4501,  0.2709],\n",
+      "        [-0.8087, -0.0217, -1.0413,  0.0702]])\n",
+      "x[:1]: \n",
+      "tensor([[ 0.8042, -0.1383,  0.3196, -1.0187]])\n",
+      "x[:1, 1:3]: \n",
+      "tensor([[-0.1383,  0.3196]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "#indexing\n",
+    "x = torch.randn(3, 4)\n",
+    "print (f\"x: \\n{x}\")\n",
+    "print (f\"x[:1]: \\n{x[:1]}\")\n",
+    "print (f\"x[:1, 1:3]: \\n{x[:1, 1:3]}\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -245,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.4 | packaged by conda-forge | (main, Mar 30 2022, 08:38:02) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
