Done with Linear Regression w Reglu

--- a/MachineLearning/LinearRegressionImple.ipynb
+++ b/MachineLearning/LinearRegressionImple.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,18 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.         -4.25441649]\n",
-      " [ 1.         12.16326313]\n",
-      " [ 2.         10.13183217]\n",
-      " [ 3.         24.06075751]\n",
-      " [ 4.         27.39927424]]\n"
+      "[[ 0.         -7.13337784]\n",
+      " [ 1.         16.7108868 ]\n",
+      " [ 2.         16.67675671]\n",
+      " [ 3.         17.45403327]\n",
+      " [ 4.         26.77583246]]\n"
      ]
     },
     {
@@ -104,27 +104,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>-4.254416</td>\n",
+       "      <td>-7.133378</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>12.163263</td>\n",
+       "      <td>16.710887</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2.0</td>\n",
-       "      <td>10.131832</td>\n",
+       "      <td>16.676757</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3.0</td>\n",
-       "      <td>24.060758</td>\n",
+       "      <td>17.454033</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4.0</td>\n",
-       "      <td>27.399274</td>\n",
+       "      <td>26.775832</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -132,14 +132,14 @@
       ],
       "text/plain": [
        "     X          y\n",
-       "0  0.0  -4.254416\n",
-       "1  1.0  12.163263\n",
-       "2  2.0  10.131832\n",
-       "3  3.0  24.060758\n",
-       "4  4.0  27.399274"
+       "0  0.0  -7.133378\n",
+       "1  1.0  16.710887\n",
+       "2  2.0  16.676757\n",
+       "3  3.0  17.454033\n",
+       "4  4.0  26.775832"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,6 +576,437 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import torch \n",
+    "\n",
+    "#set seed for reproducibility\n",
+    "torch.manual_seed(SEED)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train: 35 (0.70)\n",
+      "remaining: 15 (0.30)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# splitting the data\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "TRAIN_SIZE = 0.7\n",
+    "VAL_SIZE = 0.15\n",
+    "TEST_SIZE = 0.15\n",
+    "\n",
+    "# Split (train)\n",
+    "X_train, X_, y_train, y_ = train_test_split(X, y, train_size=TRAIN_SIZE)\n",
+    "\n",
+    "print (f\"train: {len(X_train)} ({(len(X_train) / len(X)):.2f})\\n\"\n",
+    "       f\"remaining: {len(X_)} ({(len(X_) / len(X)):.2f})\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train: 35 (0.70)\n",
+      "val: 7 (0.14)\n",
+      "test: 8 (0.16)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Split (test)\n",
+    "X_val, X_test, y_val, y_test = train_test_split(\n",
+    "    X_, y_, train_size=0.5)\n",
+    "\n",
+    "print(f\"train: {len(X_train)} ({len(X_train)/len(X):.2f})\\n\"\n",
+    "      f\"val: {len(X_val)} ({len(X_val)/len(X):.2f})\\n\"\n",
+    "      f\"test: {len(X_test)} ({len(X_test)/len(X):.2f})\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean: 0.3, std: 0.7\n",
+      "mean: 0.2, std: 0.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Standardize the data (mean=0, std=1) using training data\n",
+    "X_scaler = StandardScaler().fit(X_train)\n",
+    "y_scaler = StandardScaler().fit(y_train)\n",
+    "\n",
+    "# Apply scaler on training and test data\n",
+    "X_train = X_scaler.transform(X_train)\n",
+    "y_train = y_scaler.transform(y_train).ravel().reshape(-1, 1)\n",
+    "X_val = X_scaler.transform(X_val)\n",
+    "y_val = y_scaler.transform(y_val).ravel().reshape(-1, 1)\n",
+    "X_test = X_scaler.transform(X_test)\n",
+    "y_test = y_scaler.transform(y_test).ravel().reshape(-1, 1)\n",
+    "\n",
+    "\n",
+    "# Check (means should be ~0 and std should be ~1)\n",
+    "print (f\"mean: {np.mean(X_test, axis=0)[0]:.1f}, std: {np.std(X_test, axis=0)[0]:.1f}\")\n",
+    "print (f\"mean: {np.mean(y_test, axis=0)[0]:.1f}, std: {np.std(y_test, axis=0)[0]:.1f}\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "INPUT_DIM = X_train.shape[1]   #1\n",
+    "OUTPUT_DIM = y_train.shape[1]  #1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Model\n",
+    "from torch import nn\n",
+    "import torch\n",
+    "\n",
+    "class LinearRegression(nn.Module):\n",
+    "    def __init__(self,input_dim, output_dim):\n",
+    "        super(LinearRegression,self).__init__()\n",
+    "        self.fc1 = nn.Linear(input_dim,output_dim)\n",
+    "\n",
+    "    def forward(self,x_in):\n",
+    "        y_pred = self.fc1(x_in)\n",
+    "        return y_pred\n",
+    "\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<bound method Module.named_parameters of LinearRegression(\n",
+      "  (fc1): Linear(in_features=1, out_features=1, bias=True)\n",
+      ")>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize model\n",
+    "model = LinearRegression(input_dim=INPUT_DIM, output_dim=OUTPUT_DIM)\n",
+    "print (model.named_parameters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss:  0.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Loss dummy using pytorch\n",
+    "loss_fn = nn.MSELoss()\n",
+    "y_pred = torch.Tensor([0., 0., 1., 1.])\n",
+    "y_true =  torch.Tensor([1., 1., 1., 0.])\n",
+    "loss = loss_fn(y_pred, y_true)\n",
+    "print(\"Loss: \", loss.numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Using Optimizer instead of batch gradient descent\n",
+    "\n",
+    "from torch.optim import Adam\n",
+    "# Optimizer\n",
+    "LEARNING_RATE = 1e-1\n",
+    "optimizer = Adam(model.parameters(), lr=LEARNING_RATE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Training\n",
+    "\n",
+    "# Convert data to tensors\n",
+    "X_train = torch.Tensor(X_train)\n",
+    "y_train = torch.Tensor(y_train)\n",
+    "X_val = torch.Tensor(X_val)\n",
+    "y_val = torch.Tensor(y_val)\n",
+    "X_test = torch.Tensor(X_test)\n",
+    "y_test = torch.Tensor(y_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LinearRegression(\n",
+      "  (fc1): Linear(in_features=1, out_features=1, bias=True)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 0 | loss: 0.50\n",
+      "Epoch: 20 | loss: 0.04\n",
+      "Epoch: 40 | loss: 0.03\n",
+      "Epoch: 60 | loss: 0.03\n",
+      "Epoch: 80 | loss: 0.03\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Training\n",
+    "\n",
+    "NUM_EPOCHS  =100\n",
+    "for epoch in range(NUM_EPOCHS):\n",
+    "    # Forward pass\n",
+    "    y_pred = model.forward(X_train)\n",
+    "\n",
+    "    # Loss\n",
+    "    loss = loss_fn(y_pred, y_train)\n",
+    "\n",
+    "    # Zero all gradients\n",
+    "    optimizer.zero_grad() #Done before back prop\n",
+    "\n",
+    "    # Backward pass\n",
+    "    loss.backward()\n",
+    "\n",
+    "    # Update weights\n",
+    "    optimizer.step()\n",
+    "\n",
+    "    if epoch%20==0:\n",
+    "        print (f\"Epoch: {epoch} | loss: {loss:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10. 15. 25.]\n",
+      "[24.25714286]\n",
+      "tensor([[-0.9530],\n",
+      "        [-0.6188],\n",
+      "        [ 0.0497]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Inference\n",
+    "# Feed in your own inputs\n",
+    "sample_indices = [10, 15, 25]\n",
+    "X_infer = np.array(sample_indices, dtype=np.float32)\n",
+    "print(X_infer)\n",
+    "\n",
+    "X_infer = torch.Tensor(X_scaler.transform(X_infer.reshape(-1, 1)))\n",
+    "print(X_infer)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54.83 (actual) → 41.48 (predicted)\n",
+      "48.63 (actual) → 58.60 (predicted)\n",
+      "105.04 (actual) → 92.84 (predicted)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Unstandardize predictions\n",
+    "pred_infer = model(X_infer).detach().numpy() * np.sqrt(y_scaler.var_) + y_scaler.mean_ \n",
+    "\n",
+    "\n",
+    "for i, index in enumerate(sample_indices):\n",
+    "    print(f\"{df.iloc[index]['y']:.2f} (actual) → {pred_infer[i][0]:.2f} (predicted)\")\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "REGULARIZATION\n",
+    "\n",
+    "Regularization helps decrease overfitting. Below is L2 regularization (ridge regression). There are many forms of regularization but they all work to reduce overfitting in our models. With L2 regularization, we are penalizing large weight values by decaying them because having large weights will lead to preferential bias with the respective inputs and we want the model to work with all the inputs and not just a select few. There are also other types of regularization like L1 (lasso regression) which is useful for creating sparse models where some feature coefficients are zeroed out, or elastic which combines L1 and L2 penalties."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In PyTorch, we can add L2 regularization by adjusting our optimizer. The Adam optimizer has a weight_decay parameter which to control the L2 penalty."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L2_LAMBDA = 1e-2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize model\n",
+    "model = LinearRegression(input_dim=INPUT_DIM, output_dim=OUTPUT_DIM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optimizer (w/ L2 regularization)\n",
+    "optimizer = Adam(model.parameters(), lr=LEARNING_RATE, weight_decay=L2_LAMBDA)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rest remains same"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -595,7 +1026,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "testing1",
    "language": "python",
    "name": "python3"
   },
@@ -609,12 +1040,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "50c5c2b6e05db9fe8b3433ad8e6dc52eedfaade324407e06c6799762d580ed33"
+    "hash": "f469700b879f126f4ecc3b89156e760f4935dad8006cc8fff582a9de37d93f4c"
    }
   }
  },
