--- a/Foundations/PyTorchbasics.ipynb
+++ b/Foundations/PyTorchbasics.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#MAde with ML\n",
+    "\n",
+    "# EXTRA ->  https://aman.ai/primers/pytorch/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -251,25 +261,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Automatic Differentiation"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch\n",
+    "\n",
+    "from torch.autograd import Variable\n",
+    "\n",
+    "a = Variable(torch.tensor([[1,2],[3,4]]),requires_grad=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(a)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "firstEnv",
+   "display_name": "testingenv",
    "language": "python",
-   "name": "firstenv"
+   "name": "testingenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -281,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4 | packaged by conda-forge | (main, Mar 30 2022, 08:38:02) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
