--- a/MachineLearning/neural_network.ipynb
+++ b/MachineLearning/neural_network.ipynb
@@ -1427,6 +1427,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -1706,6 +1707,100 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.nn import init\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MLP(nn.Module):\n",
+    "    def __init__(self, input_dim, hidden_dim, num_classes):\n",
+    "        super(MLP, self).__init__()\n",
+    "        self.fc1 = nn.Linear(input_dim, hidden_dim)\n",
+    "        self.fc2 = nn.Linear(hidden_dim, num_classes)\n",
+    "\n",
+    "    def init_weights(self):\n",
+    "        init.xavier_normal(self.fc1.weight, gain=init.calculate_gain(\"relu\"))\n",
+    "\n",
+    "    def forward(self, x_in):\n",
+    "        z = F.relu(self.fc1(x_in)) # ReLU activation function added!\n",
+    "        z = self.fc2(z)\n",
+    "        return z\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DRopOut"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DROPOUT_P = 0.1 # percentage of weights that are dropped each pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MLP(nn.Module):\n",
+    "    def __init__(self, input_dim, hidden_dim, dropout_p, num_classes):\n",
+    "        super(MLP, self).__init__()\n",
+    "        self.fc1 = nn.Linear(input_dim, hidden_dim)\n",
+    "        self.dropout = nn.Dropout(dropout_p) # dropout\n",
+    "        self.fc2 = nn.Linear(hidden_dim, num_classes)\n",
+    "\n",
+    "    def init_weights(self):\n",
+    "        init.xavier_normal(self.fc1.weight, gain=init.calculate_gain(\"relu\"))\n",
+    "\n",
+    "    def forward(self, x_in):\n",
+    "        z = F.relu(self.fc1(x_in))\n",
+    "        z = self.dropout(z) # dropout\n",
+    "        z = self.fc2(z)\n",
+    "        return z\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<bound method Module.named_parameters of MLP(\n",
+      "  (fc1): Linear(in_features=2, out_features=100, bias=True)\n",
+      "  (dropout): Dropout(p=0.1, inplace=False)\n",
+      "  (fc2): Linear(in_features=100, out_features=3, bias=True)\n",
+      ")>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize model\n",
+    "model = MLP(input_dim=INPUT_DIM, hidden_dim=HIDDEN_DIMS,\n",
+    "            dropout_p=DROPOUT_P, num_classes=OUTPUT_DIMS)\n",
+    "print (model.named_parameters)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1719,6 +1814,49 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
