--- a/MachineLearning/Dataquality.ipynb
+++ b/MachineLearning/Dataquality.ipynb
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,38 +247,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "classes: ['benign', 'malignant']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fit on train data\n",
+    "label_encoder = label_encoder.fit(y_train)\n",
+    "classes = list(label_encoder.classes_)\n",
+    "print (f\"classes: {classes}\")\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y_train[0]: malignant\n",
+      "y_train[0]: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert labels to tokens\n",
+    "print (f\"y_train[0]: {y_train[0]}\")\n",
+    "y_train = label_encoder.transform(y_train)\n",
+    "y_val = label_encoder.transform(y_val)\n",
+    "y_test = label_encoder.transform(y_test)\n",
+    "print (f\"y_train[0]: {y_train[0]}\")\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "counts: [272 428]\n",
+      "weights: {0: 0.003676470588235294, 1: 0.002336448598130841}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Class weights\n",
+    "counts = np.bincount(y_train)\n",
+    "class_weights = {i: 1.0/count for i, count in enumerate(counts)}\n",
+    "print (f\"counts: {counts}\\nweights: {class_weights}\")\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Standardize Data"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Standardize the data (mean=0, std=1) using training data\n",
+    "X_scaler = StandardScaler().fit(X_train)\n",
+    "\n",
+    "\n",
+    "# Apply scaler on training and test data (don't standardize outputs for classification)\n",
+    "X_train = X_scaler.transform(X_train)\n",
+    "X_val = X_scaler.transform(X_val)\n",
+    "X_test = X_scaler.transform(X_test)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_test[0]: mean: -0.0, std: 0.8\n",
+      "X_test[1]: mean: 0.0, std: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check (means should be ~0 and std should be ~1)\n",
+    "print (f\"X_test[0]: mean: {np.mean(X_test[:, 0], axis=0):.1f}, std: {np.std(X_test[:, 0], axis=0):.1f}\")\n",
+    "print (f\"X_test[1]: mean: {np.mean(X_test[:, 1], axis=0):.1f}, std: {np.std(X_test[:, 1], axis=0):.1f}\")\n"
+   ]
   },
   {
    "cell_type": "code",
